fix issue with label is not associated to form element

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-date-input/query-write-date-input.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-date-input/query-write-date-input.component.html
@@ -24,7 +24,7 @@
       <label class="govuk-label govuk-date-input__label" [for]="formControlName + '-year'">
         {{ 'Year' | rpxTranslate }}
       </label>
-      <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="formControlName + '-year'"
+      <input class="govuk-input govuk-date-input__input govuk-input--width-4" [id]="formControlName + '-year'"
              [name]="formControlName + '-year'" type="text" inputmode="numeric" maxlength="4"
              [(ngModel)]="year" (input)="updateDate()" [disabled]="disabled">
     </div>
