--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/read-collection-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/read-collection-field.html
@@ -11,7 +11,8 @@
             field_type: caseField.field_type.collection_field_type,
             display_context_parameter: caseField.display_context_parameter,
             value: caseField.value,
-            hidden: caseField.hidden
+            hidden: caseField.hidden,
+            parent: caseField
           }"
           [context]="context"
           [topLevelFormGroup]="topLevelFormGroup">
@@ -24,11 +25,12 @@
       <td>
         <ccd-field-read
           [caseField]="{
-            id: i,
+            id: i + '',
             label: caseField.label + ' ' + (i + 1),
             field_type: caseField.field_type.collection_field_type,
             value: item.value,
-            hidden: caseField.hidden
+            hidden: caseField.hidden,
+            parent: caseField
           }"
           [context]="context"
           [topLevelFormGroup]="topLevelFormGroup"
