--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
@@ -3,7 +3,7 @@
     <span class="form-label" attr.aria-label="{{caseField | ccdFieldLabel}}">{{(caseField | ccdFieldLabel)}}</span>
   </label>
   <span class="form-hint" *ngIf="caseField.hint_text">{{caseField.hint_text | rpxTranslate}}</span>
-  <span class="error-message" *ngIf="fileUploadMessages && !valid">{{fileUploadMessages | rpxTranslate}}</span>
+  <span class="error-message" role="alert" attr.aria-label="{{fileUploadMessages | rpxTranslate}}" *ngIf="fileUploadMessages && !valid">{{fileUploadMessages | rpxTranslate}}</span>
 
   <div>
     <!--<span *ngIf="getUploadedFileName()" class="text-16">File name: {{getUploadedFileName()}}</span>-->
