--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/pagination/pagination.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/pagination/pagination.component.html
@@ -18,7 +18,7 @@
       <li [class.current]="p.getCurrent() === page.value" [class.ellipsis]="page.label === '...'"
         *ngFor="let page of p.pages">
         <a tabindex="0" (keyup.enter)="p.setCurrent(page.value)" (click)="p.setCurrent(page.value)"
-          *ngIf="p.getCurrent() !== page.value" [attr.aria-label]="(page.label === '...') ? 'Change pagination range' : 'Page ' | rpxTranslate + (page.label | number:'')">
+          *ngIf="p.getCurrent() !== page.value" [attr.aria-label]="(page.label === '...') ? ('Change pagination range' | rpxTranslate) : ('Page ' | rpxTranslate) + (page.label | number:'')">
           <span class="show-for-sr">{{ screenReaderPageLabel | rpxTranslate }} </span>
           <span>{{ (page.label === '...') ? page.label : (page.label | number:'') }}</span>
         </a>
