--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.html
@@ -25,9 +25,11 @@
   <div class="govuk-form-group" id="case-file-view">
     <!-- Document tree -->
     <div class="document-tree-container">
-      <ccd-case-file-view-folder class="document-tree-container__tree"
+      <ccd-case-file-view-folder 
+        class="document-tree-container__tree"
         [categoriesAndDocuments]="categoriesAndDocuments$"
-        (clickedDocument)="setMediaViewerFile($event); resetErrorMessages()" (moveDocument)="moveDocument($event)"
+        (clickedDocument)="setMediaViewerFile($event); resetErrorMessages()" 
+        (moveDocument)="moveDocument($event)"
         [allowMoving]="allowMoving"></ccd-case-file-view-folder>
     </div>
     <!-- Slider -->
@@ -35,10 +37,16 @@
     <!-- Media viewer -->
     <div class="media-viewer-container">
       <ng-container *ngIf="currentDocument">
-        <mv-media-viewer [url]="currentDocument.document_binary_url"
-          [downloadFileName]="currentDocument.document_filename" [showToolbar]="true"
-          [contentType]="currentDocument.content_type" [enableAnnotations]="true" [enableRedactions]="true"
-          [height]="'94.5vh'" [caseId]="caseId" [enableICP]="isIcpEnabled()">
+        <mv-media-viewer 
+          [url]="currentDocument.document_binary_url"
+          [downloadFileName]="currentDocument.document_filename" 
+          [showToolbar]="true"
+          [contentType]="currentDocument.content_type" 
+          [enableAnnotations]="true" 
+          [enableRedactions]="true"
+          [height]="'94.5vh'" 
+          [caseId]="caseId" 
+          [enableICP]="isIcpEnabled()">
         </mv-media-viewer>
       </ng-container>
     </div>
