--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.html
@@ -1,6 +1,5 @@
 <ng-container *ngIf="errorMessages?.length">
-  <div id="case-file-view-field-errors" class="govuk-error-summary govuk-!-margin-bottom-4"
-    data-module="govuk-error-summary">
+  <div id="case-file-view-field-errors" class="govuk-error-summary govuk-!-margin-bottom-4" data-module="govuk-error-summary">
     <div role="alert">
       <h2 class="govuk-error-summary__title">
         There is a problem
