--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
@@ -1,7 +1,10 @@
 <div class="document-filter-container">
   <div class="form-group document-filter" [formGroup]="documentFilterFormGroup">
-    <input class="form-control document-search" type="search" id="document-search" name="documentSearchFormControl"
-      formControlName="documentSearchFormControl" placeholder="Search by document name"
+    <input class="form-control document-search" 
+      type="search" id="document-search" 
+      name="documentSearchFormControl"
+      formControlName="documentSearchFormControl" 
+      placeholder="Search by document name"
       aria-label="Search by document name" />
   </div>
 </div>
@@ -29,14 +32,19 @@
   <div>
     <cdk-tree [dataSource]="nestedDataSource" [treeControl]="nestedTreeControl">
       <!-- document -->
-      <cdk-nested-tree-node class="document-tree-container__node document-tree-container__node--document" 
-          *cdkTreeNodeDef="let node">
-        <button class="node" (click)="selectedNodeItem = node; clickedDocument.emit(node)"
-          [class.node--selected]="selectedNodeItem?.name === node.name">
+      <cdk-nested-tree-node 
+        class="document-tree-container__node document-tree-container__node--document" 
+        *cdkTreeNodeDef="let node"
+      >
+        <button class="node" 
+          (click)="selectedNodeItem = node; clickedDocument.emit(node)" 
+          [class.node--selected]="selectedNodeItem?.name === node.name"
+        >
           <div class="node__icon" disabled>
             <img src="/assets/img/case-file-view/case-file-view-document.svg" 
               class="node__iconImg"
-              alt="Document icon" />
+              alt="Document icon" 
+            />
           </div>
           <span class="node__name node-name-document">
             {{ node.name }}
@@ -51,7 +59,8 @@
                 (openInANewTabAction)="triggerDocumentAction('openInANewTab', node)" 
                 (downloadAction)="triggerDocumentAction('download', node)" 
                 (printAction)="triggerDocumentAction('print', node)" 
-                [allowMoving]="allowMoving">
+                [allowMoving]="allowMoving"
+            >
             </ccd-case-file-view-folder-document-actions>
           </div>
         </button>
