--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.scss
@@ -15,7 +15,7 @@
     padding: 10px;
 
     .document-search {
-      background: url(/assets/images/icon-search-black.svg) no-repeat right #fff;
+      background: url(/assets/images/icon-search-black.svg) no-repeat right #FFF;
       background-position-x: calc(100% - 4px);
       padding-right: 30px;
       width: 100%;
@@ -79,7 +79,7 @@
     border: 4px solid rgba(0, 0, 0, 0);
     background-clip: padding-box;
     border-radius: 9999px;
-    background-color: #aaaaaa;
+    background-color: #AAAAAA;
   }
 
   &::-webkit-scrollbar-button {
