--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
@@ -10,9 +10,7 @@
 </div>
 
 <div class="document-folders-header">
-  <div class="document-folders-header__title">
-    Documents ({{ documentCount }})
-  </div>
+  <div class="document-folders-header__title">Documents ({{ documentCount }})</div>
   <div class="document-folders-header__flex">
     <ccd-case-file-view-folder-toggle 
       (expandAll)="expandAll($event)"
