EXUI-2678: Participant button hidden when browser had been made smaller.

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.scss
@@ -26,4 +26,15 @@
     flex: 1 1 0;
     overflow: hidden;
   }
+
+  ::ng-deep .comments-panel {
+    margin-top: 2.9rem !important;
+  }
+
+  @media (max-width: 1200px) {
+    ::ng-deep .comments-panel {
+      margin-top: 5rem !important;
+    }
+  }
+
 }
