--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div *ngIf="(hasResults() || hasDrafts())" class="pagination-top">
-      <output [attr.aria-label]="getTotalResults() + ' results have been found' | rpxTranslate"></output>
+      <output [attr.aria-label]="getTotalResults() + ' ' + ('results have been found' | rpxTranslate)"></output>
           <span class="text-16" id="search-result-summary__text">{{'Showing' | rpxTranslate}}
         <span class="govuk-!-font-weight-bold">{{ getFirstResult() }}</span>
         {{'to' | rpxTranslate}}
