--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
@@ -1,10 +1,10 @@
 <ng-container *ngIf="query">
-  <cut-alert type="error" *ngIf="hasRespondedToQuery()">
+  <cut-alert type="error" *ngIf="hasRespondedToQuery() && !showItem">
     <ng-container>{{message}}</ng-container>
   </cut-alert>
 
   <br/>
-  <p *ngIf="showLink">
+  <p *ngIf="showItem">
     <a class="govuk-link" href="javascript:void(0)" (click)="onBack()">{{ 'Back to query list' | rpxTranslate }}</a>
   </p>
   <div>
