--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder-selector/case-file-view-folder-selector.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder-selector/case-file-view-folder-selector.component.html
@@ -1,4 +1,4 @@
-<div class="close" (click)="cancel()"></div>
+<div tabindex="0" aria-label="close" class="close" (click)="cancel()"></div>
 <h2 class="govuk-heading-l">Move File</h2>
 <p>Where do you want to move "{{ data.document.document_filename }}" file?</p>
 <div class="folders govuk-radios govuk-radios--conditional">
@@ -8,7 +8,7 @@
 </div>
 <div class="govuk-button-group">
     <button class="button button-primary" type="button" (click)="save()">Save</button>
-    <a (click)="cancel()" class="cancel">Cancel</a>
+    <a (click)="cancel()" class="cancel" href="javascript:void(0)">Cancel</a>
 </div>
 
 <ng-template #folder let-cat="cat" let-level="level">
