Use (click) insteas of @HostListener

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-full-access-view/case-full-access-view.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-full-access-view/case-full-access-view.component.html
@@ -75,8 +75,7 @@
                       <td [id]="'case-viewer-field-read--' + field.id" scope="col">
                         <span class="text-16">
                           <ccd-field-read [topLevelFormGroup]="formGroup?.controls['data']"
-                                          [caseField]="field" [caseReference]="caseDetails.case_id"
-                                          [markdownUseHrefAsRouterLink]="markdownUseHrefAsRouterLink">
+                                          [caseField]="field" [caseReference]="caseDetails.case_id">
                           </ccd-field-read>
                         </span>
                       </td>
@@ -85,8 +84,7 @@
                       <th [id]="'case-viewer-field-read--' + field.id" scope="col">
                         <span class="text-16">
                           <ccd-field-read [topLevelFormGroup]="formGroup.controls['data']"
-                                          [caseField]="field" [caseReference]="caseDetails.case_id"
-                                          [markdownUseHrefAsRouterLink]="markdownUseHrefAsRouterLink">
+                                          [caseField]="field" [caseReference]="caseDetails.case_id">
                           </ccd-field-read>
                         </span>
                       </th>
