--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/base-field/field-read.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/base-field/field-read.html
@@ -1,5 +1,5 @@
 <div [hidden]="caseField.hidden">
-  <ccd-field-read-label [formGroup]="formGroup" [topLevelFormGroup]="topLevelFormGroup" [caseField]="caseField" [withLabel]="withLabel" [markdownUseHrefAsRouterLink]="markdownUseHrefAsRouterLink">
+  <ccd-field-read-label [formGroup]="formGroup" [topLevelFormGroup]="topLevelFormGroup" [caseField]="caseField" [withLabel]="withLabel">
     <ng-container #fieldContainer></ng-container>
   </ccd-field-read-label>
 </div>
