--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/label/label-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/label/label-field.html
@@ -1,9 +1,9 @@
 <dl [hidden]="caseField.hidden" class="case-field" ccdLabelSubstitutor [caseField]="caseField" [contextFields]="caseFields" [id]="caseField.id">
   <dt>
-    <ccd-markdown *ngIf="labelCanBeTranslated" [content]="caseField.label | rpxTranslate" [markdownUseHrefAsRouterLink]="markdownUseHrefAsRouterLink">
+    <ccd-markdown *ngIf="labelCanBeTranslated" [content]="caseField.label | rpxTranslate">
     </ccd-markdown>
 
-    <ccd-markdown *ngIf="!labelCanBeTranslated" [content]="caseField.value || caseField.label" [markdownUseHrefAsRouterLink]="markdownUseHrefAsRouterLink">
+    <ccd-markdown *ngIf="!labelCanBeTranslated" [content]="caseField.value || caseField.label">
     </ccd-markdown>
   </dt>
   <dd></dd>
